--- a/views/content.html
+++ b/views/content.html
@@ -11,22 +11,51 @@
             <img id="extension-candlecam-picture" src="/media/candlecam/stream/stream.mjpeg">
                    
             <div id="extension-candlecam-main-buttons-container">
-                <div id="extension-candlecam-main-door-buttons-container" class="extension-candlecam-hiddenX">
+                <button id="extension-candlecam-save-picture-button" class="icon-button" aria-label="Save picture"></button>
+                <div id="extension-candlecam-main-door-buttons-container" class="extension-candlecam-hidden">
                     <button id="extension-candlecam-door-release-button" class="icon-button extension-candlecam-hidden" aria-label="Open door"></button>
                     <button id="extension-candlecam-door-close-button" class="icon-button extension-candlecam-hidden" aria-label="Close door"></button>
                 </div>
-                <button id="extension-candlecam-save-picture-button" class="icon-button" aria-label="Save picture"></button>
+                
             </div>
                    
             <div id="extension-candlecam-clock-container"><div id="extension-candlecam-clock"></div></div>
             <div id="extension-candlecam-picture-exit-container">
                 <div id="extension-candlecam-picture-exit">Overview</div>
-                <div id="extension-candlecam-stream-buttons-container">buttons here</div>
+                <div id="extension-candlecam-stream-buttons-container"></div>
             </div>
+        
+        
+            <div id="extension-candlecam-settings-container" class="extension-candlecam-hidden">
+            
+                <h2>Settings</h2>
+                <p>Here you can select which devices should work together to form a smart doorbell system.</p>
+            
+                <h5>Camera source</h5>
+                <select id="extension-candlecam-camera-source-select" class="extension-candlecam-dropdown">
+                    <option value=""></option>
+                </select>
+            
+                <h5>Push button</h5>
+                <select id="extension-candlecam-push-button-select" class="extension-candlecam-dropdown">
+                    <option value=""></option>
+                </select>
+            
+                <h5>Door release</h5>
+                <select id="extension-candlecam-door-release-select" class="extension-candlecam-dropdown">
+                    <option value=""></option>
+                </select>
+            
+            </div>
+        
+            <div id="extension-candlecam-settings-button-container">
+                <button id="extension-candlecam-settings-button" class="icon-button" data-l10n-id="settings-button" aria-label="Doorbell settings"></button>
+            </div>
+            
         </div>
         
         
-        <div id="extension-candlecam-overview" class="extension-candlecam-hidden">
+        <div id="extension-candlecam-overview">
             <h3>Saved photos</h3>
             <ul id="extension-candlecam-photos-list"></ul>
             
@@ -36,31 +65,7 @@
         </div>
         
         
-        <div id="extension-candlecam-settings-container" class="extension-candlecam-hidden">
-            
-            <h2>Settings</h2>
-            <p>Here you can select which devices should work together to form a smart doorbell system.</p>
-            
-            <h5>Camera source</h5>
-            <select id="extension-candlecam-camera-source-select" class="extension-candlecam-dropdown">
-                <option value=""></option>
-            </select>
-            
-            <h5>Push button</h5>
-            <select id="extension-candlecam-push-button-select" class="extension-candlecam-dropdown">
-                <option value=""></option>
-            </select>
-            
-            <h5>Door release</h5>
-            <select id="extension-candlecam-door-release-select" class="extension-candlecam-dropdown">
-                <option value=""></option>
-            </select>
-            
-        </div>
-        
-        <div id="extension-candlecam-settings-button-container">
-            <button id="extension-candlecam-settings-button" class="icon-button" data-l10n-id="settings-button" aria-label="Doorbell settings"></button>
-        </div>
+
         
     </div>
 
