--- a/views/content.html
+++ b/views/content.html
@@ -57,7 +57,11 @@
                
         <div id="extension-candlecam-clock-container"><div id="extension-candlecam-clock"></div></div>
         
-        
+        <div id="extension-candlecam-loading">
+            <div class="extension-candlecam-spinner">
+                <div></div><div></div><div></div><div></div>
+            </div>
+        </div>
     
     
         
