--- a/css/extension.css
+++ b/css/extension.css
@@ -79,6 +79,13 @@
 
 #extension-candlecam-picture{
     width:100%;
+    height:auto;
+    max-width:100%;
+    max-height:100%;
+}
+.extension-candlecam-portrait #extension-candlecam-picture{
+    width:auto;
+    height:100%;
 }
 
 #extension-candlecam-snapshot{
